<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hints"
        android:summary="@string/hints_summary"
        android:title="@string/hints_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="border"
        android:summary="@string/border_summary"
        android:title="@string/border_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="statusbar"
        android:summary="@string/statusbar_summary"
        android:title="@string/statusbar_title" />

    <EditTextPreference
        android:defaultValue="160"
        android:key="density"
        android:summary="@string/density_summary"
        android:title="@string/density_title" />

</PreferenceScreen>